@@ -1,5 +1,13 @@
 2008-09-24  Paul Thomas  <pault@gcc.gnu.org>
 
+       PR fortran/35945
+       * gfortran.dg/host_assoc_types_2.f90: New test.
+
+       PR fortran/36700
+       * gfortran.dg/host_assoc_call_2.f90: New test.
+
+2008-09-24  Paul Thomas  <pault@gcc.gnu.org>
+
 	PR fortran/37583
 	* gfortran.dg/entry_18.f90: New test.
 
