@@ -1,5 +1,17 @@
 2008-09-24  Paul Thomas  <pault@gcc.gnu.org>
 
+       PR fortran/35945
+       * resolve.c (resolve_fl_variable_derived):  Remove derived type
+       comparison for use associated derived types.  Host association
+       of a derived type will not arise if there is a local derived type
+       whose use name is the same.
+
+       PR fortran/36700
+       * match.c (gfc_match_call):  Use the existing symbol even if
+       it is a function.
+
+2008-09-24  Paul Thomas  <pault@gcc.gnu.org>
+
 	PR fortran/37583
 	* decl.c (gfc_match_entry): Both subroutines and functions can
 	give a true for get_proc_mame's last argument so remove the
